# SkelMUD

./: .gitignore  CMakeLists.txt  Jenkinsfile  README  build.sh
SkelMUD/: Account.cpp  Account.h  Accounts.cpp  Accounts.h  Accounts.sml  Callbacks.cpp  Callbacks.h  CharacterClass.cpp  CharacterClass.h  CharacterCreation.cpp  CharacterCreation.h  CommandProcessor.cpp  CommandProcessor.h  Connection.cpp  Connection.h  Entity.cpp  Entity.h  File.cpp  File.h  Format.cpp  Format.h  Game.cpp  Game.h  GameData.cpp  GameData.h  Jenkinsfile  LICENSE  Logger.cpp  Logger.h  Makefile  Mixin.cpp  Mixin.h  Network.cpp  Network.h  Planet.cpp  Planet.h  Player.cpp  Player.h  Players.cpp  Players.h  (+11 more)
SkelMUD/Accounts/: Account.cpp  Account.h  Accounts.cpp  Accounts.h  Accounts.sml
SkelMUD/Areas/: Area.cpp  Area.h  AreaManager.cpp  AreaManager.h  Room.cpp  Room.h
SkelMUD/Characters/: Characters.cpp  Characters.h  Characters.sml
SkelMUD/Classes/: Builtin.txt  CharacterClass.cpp  CharacterClass.h  CharacterClasses.cpp  CharacterClasses.h
SkelMUD/Config/: Configuration.cpp  Configuration.h  config.sml
SkelMUD/Data/: Accounts.sml  Characters.sml  Classes.sml  Races.sml
SkelMUD/Data/Items/: Armor.sml  Consumables.sml  Weapons.sml
SkelMUD/Data/NPCs/: Bakrust.sml  Pixel.sml  SatanBunny.sml
SkelMUD/Data/Planets/: Mypos.sml  Newbis.sml  PlanetX.sml  Planets.sml
SkelMUD/Data/Ships/: Ships.sml  TestShip1.sml  TestShip2.sml
SkelMUD/Items/: Ammo.cpp  Ammo.h  Consumable.cpp  Consumable.h  Item.cpp  Item.h  ItemContainer.cpp  ItemContainer.h  ItemMixin.cpp  ItemMixin.h  Items.cpp  Items.h  Modifier.cpp  Modifier.h  Shieldable.cpp  Shieldable.h  Wearable.cpp  Wearable.h  Wieldable.cpp  Wieldable.h
SkelMUD/MOBs/: MOB.cpp  MOB.h  MOBs.cpp  MOBs.h
SkelMUD/NPCs/: NPC.cpp  NPC.h  NPCMixin.cpp  NPCMixin.h  NPCs.cpp  NPCs.h  ShopKeeper.cpp  ShopKeeper.h
SkelMUD/Planets/: Newbis.sml  Planet.cpp  Planet.h  Planets.cpp  Planets.h  Test.planet
SkelMUD/Races/: Race.cpp  Race.h  Races.cpp  Races.h
SkelMUD/Ships/: Ship.cpp  Ship.h  Ships.cpp  Ships.h  Ships.sml  TestShip1.sml
SkelMUD/Skexml/: AttributeNode.cpp  AttributeNode.h  ListNode.cpp  ListNode.h  Node.cpp  Node.h  SkexmlParser.cpp  SkexmlParser.h  sample.sml
SkelMUD/Skills/: Skill.cpp  Skill.h  Skills.cpp  Skills.h
SkelMUD/States/: BuildingState.cpp  BuildingState.h  CreateCharacterState.cpp  CreateCharacterState.h  GameState.cpp  GameState.h  LoginState.cpp  LoginState.h  PlayingState.cpp  PlayingState.h  StateFactory.cpp  StateFactory.h  TestState.cpp  TestState.h  UserNameState.cpp  UserNameState.h
SkelMUD/Test/: SkexmlTest.cpp  SkexmlTest.h
